# malphas

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.build  PROTOCOL.md  README.md  RELEASE.md  REVIEW_REQUEST.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/auto-loop/: INDEX.md  SUMMARY.md  iter-001-review.md  iter-002-plan-replay-protection.md  iter-003-red-replay-protection.md  iter-004-green-replay-protection.md  iter-005-next-target.md  iter-006-green-microfixes.md  iter-006-plan-microfixes.md  iter-007-eng-quality-ci.md  iter-008-green-mypy.md  iter-008-plan-mypy.md  iter-009-next-target.md  iter-010-green-file-transfer.md  iter-010-plan-file-transfer.md  iter-011-next-target.md  iter-012-green-cli-files.md  iter-013-next-target.md  iter-014-green-readme.md  iter-015-next-target.md  iter-016-green-secure-buffer.md  iter-017-next-target.md  iter-018-green-fuzz.md  iter-019-next-target.md  iter-020-green-coverage-bandit.md  iter-021-next-target.md  iter-022-green-api-files.md  iter-023-next-target.md  iter-024-green-readme-consolidation.md  iter-025-next-target.md  iter-026-green-auth-prefix.md  iter-027-next-target.md  iter-028-green-blake2s-peerid.md  iter-029-next-target.md  iter-030-green-mypy-bucket.md  iter-031-next-target.md  iter-032-green-mypy-bucket-14.md  iter-033-next-target.md  iter-034-green-check-script.md  iter-035-next-target.md  (+24 more)
docs/auto-loop/staged/: test_files.py.staged
docs/plans/: 2026-04-06-double-ratchet.md
docs/specs/: 2026-04-04-cli-ui-upgrade.md
frontend/pwa/: index.html  manifest.json
frontend/showcase/: index.html  wrangler.toml
scripts/: audit.sh  build-reproducible.sh  check.sh  cleanup.sh  setup.sh  verify-reproducibility.sh
src/malphas/: __init__.py  __main__.py  addressbook.py  api.py  ascii-art.txt  cli_ui.py  crypto.py  discovery.py  files.py  groups.py  gui.py  gui_dialogs.py  gui_icons.py  gui_qt.py  gui_theme.py  identity.py  identity_store.py  invite.py  memory.py  mnemonic.py  node.py  obfuscation.py  onion.py  pinstore.py  prekey.py  ratchet.py  receipts.py  replay.py  salt_store.py  sealed_sender.py  secure_buffer.py  splash.py  transport.py
tests/: conftest.py  test_api.py  test_api_files.py  test_audit_fixes.py  test_audit_followup.py  test_cli.py  test_cli_files.py  test_constant_time.py  test_file_resume.py  test_files.py  test_functional_components.py  test_functional_node.py  test_fuzz_parsers.py  test_groups.py  test_gui.py  test_gui_qt.py  test_identity_store.py  test_integration_e2e.py  test_invite.py  test_microfixes.py  test_mnemonic.py  test_pinstore.py  test_protocol_kat.py  test_protocol_vectors.py  test_ratchet.py  test_replay_protection.py  test_salt_store.py  test_sealed_sender.py  test_secure_buffer.py  test_security_addressbook.py  test_security_argon2_panic.py  test_security_crypto.py  test_security_identity.py  test_security_obfuscation.py  test_security_onion.py  test_security_review_fixes.py  test_tor_e2e.py  test_transport.py  test_x3dh.py
