[build-system]
# Pinned to a specific minor for reproducibility (TM-08).
# When you bump this, run `scripts/verify-reproducibility.sh`
# and update the "expected hashes" line in RELEASE.md.
requires = ["hatchling>=1.29,<1.31"]
build-backend = "hatchling.build"

[project]
name = "malphas"
version = "1.0.0rc5"
description = "Privacy-first P2P messenger with onion routing"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "zeroconf>=0.131",
    "pydantic>=2.0",
    "stem>=1.8",
    "argon2-cffi>=23.0",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "python-multipart>=0.0.9",
    "mnemonic>=0.20",
]

[project.scripts]
malphas = "malphas.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/malphas"]

# Ship the PEP 561 marker so downstream consumers know malphas is
# type-annotated.
[tool.hatch.build.targets.wheel.force-include]
"src/malphas/py.typed" = "malphas/py.typed"
"src/malphas/assets/sigil.png" = "malphas/assets/sigil.png"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.10",
    "hypothesis>=6",
    "bandit>=1.7",
]
gui-qt = [
    "PySide6>=6.6",
    "qasync>=0.27",     # asyncio loop integration for Qt
]

[tool.coverage.run]
source = ["src/malphas"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",      # CLI entrypoint, exercised by integration only
    "*/cli_ui.py",         # interactive surface, partially exercised
    # GUI surfaces — both Tk and Qt require a display/optional deps
    # to drive coverage. They have their own smoke suites
    # (test_gui.py, test_gui_qt.py) which auto-skip in headless CI
    # without the toolkit installed. The crypto/protocol layer is
    # the audited target; the GUI coverage gate is misleading here.
    "*/gui.py",
    "*/gui_icons.py",
    "*/gui_qt.py",
    "*/splash.py",        # boot-time stdout banner only
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
precision = 1

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "build",
    "dist",
    "frontend",
]
skips = [
    "B101",  # assert: pytest pattern, not deployed in prod paths
    "B104",  # bind 0.0.0.0: needed for LAN/Tor inbound (documented)
    "B105",  # "hardcoded password" false positive on `passphrase = ""` overwrite
    "B110",  # try/except/pass: fail-closed silent drop policy
    "B112",  # try/except/continue: stale-peer eviction
    "B311",  # random: only used for non-crypto jitter
    "B404",  # subprocess: needed for Tor HS setup
    "B603",  # subprocess no shell: arguments are constants/internal paths
    "B607",  # partial path: subprocess args are absolute or system tools
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["frontend/", "venv/", ".venv/", "build/", "dist/"]

# Modules in the strict bucket — extend this list as code is cleaned.
[[tool.mypy.overrides]]
module = [
    "malphas.replay",
    "malphas.crypto",
    "malphas.memory",
    "malphas.obfuscation",
    "malphas.pinstore",
    "malphas.invite",
    "malphas.files",
    "malphas.secure_buffer",
    "malphas.discovery",
    "malphas.receipts",
    "malphas.ratchet",
    "malphas.identity",
    "malphas.onion",
    "malphas.addressbook",
    "malphas.sealed_sender",
    "malphas.salt_store",
    "malphas.mnemonic",
    "malphas.groups",
]
strict = true

# Lenient modules — opt-out of the mypy 2.x strict-by-default checks.
# These will be promoted into the strict bucket above one at a time
# in future iters (see docs/auto-loop/).
[[tool.mypy.overrides]]
module = [
    "malphas.node",
    "malphas.transport",
    "malphas.api",
    "malphas.cli_ui",
    "malphas.__main__",
    "malphas.splash",
    "malphas.gui",
    "malphas.gui_icons",
    "malphas.gui_theme",
    "malphas.gui_qt",
]
disable_error_code = [
    "union-attr",
    "no-untyped-def",
    "no-untyped-call",
    "type-arg",
    "var-annotated",
    "no-any-return",
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",      # tkinter typestub gaps (e.g. Misc.configure(bg=...))
    "name-defined",  # ditto for Tk runtime-only attrs
    "misc",
    "call-overload",     # Tk typestubs over-narrow Toplevel(master=Misc)
    "untyped-decorator", # FastAPI's @app.post / @app.get aren't typed in older mypy stubs (api.py)
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "venv", "frontend/showcase"]

[tool.ruff.lint]
# Conservative starter set. Expand once the backlog is resolved.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear (likely bugs)
    "UP",  # pyupgrade
    "S",   # bandit (security)
]
ignore = [
    "E501",  # line too long (managed by formatter)
    "S101",  # assert in tests is fine
    "S311",  # we use `random` only for non-crypto jitter where appropriate
    "B008",  # FastAPI Depends-style defaults
    # Triaged backlog — keep silenced until each is reviewed individually.
    # Each carries an existing design rationale (see docs/auto-loop/iter-007).
    "S110",  # try-except-pass: fail-closed silent drops are a feature
    "S603",  # subprocess without shell=True: setup.sh / Tor key install
    "S104",  # bind 0.0.0.0: needed for LAN/Tor; documented
    "S108",  # /tmp: hidden-service key staging dir, deleted after copy
    "S306",  # mktemp: same staging path
    "S112",  # try-except-continue: stale-peer eviction
    "B017",  # assert raises Exception: tests want broad catch
    "B904",  # raise-without-from: silent drops, no chain leak
    "B905",  # zip strict: not relevant
    "B007",  # unused loop var
    "B011",  # assert False
    "B023",  # function-uses-loop-variable
    "F841",  # unused-variable: a few intentional `as e` for breakpoints
    "F401",  # unused imports
    "E402",  # late import: cli_ui re-imports inside method bodies on purpose
    "E701",  # one-line if
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

